fixed obscure alignment but in print.css

--- a/yacs/static/global/scss/768.scss
+++ b/yacs/static/global/scss/768.scss
@@ -143,7 +143,7 @@ body {
         margin: 0 3px;
         float: left;
 
-        @include transition(all $transition-fast $transition-type);
+        /* @include transition(all $transition-fast $transition-type); */
 
         .hour {
             display: none;
